--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "uuid": "^3.2.1"
   }
 }
